--- a/typst.toml
+++ b/typst.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cryptograph"
 version = "0.0.1"
-entrypoint "cryptograph.typ"
+entrypoint = "cryptograph.typ"
 authors = ["Maximilian Stillger"]
 license = "None"
 description = "Graph that cryptology!"
